Cashier Flow and Prisma Query issue for Transaction
