# openapi.json
@@ -2753,6 +2753,11 @@
             "type": "string",
             "format": "uuid"
           },
+          "reason": {
+            "type": "string",
+            "minLength": 2,
+            "maxLength": 500
+          },
           "lines": {
             "type": "array",
             "items": {
@@ -2807,6 +2812,7 @@
         "required": [
           "saleId",
           "shiftId",
+          "reason",
           "lines",
           "refundPayments"
         ]
